# meme.crabenjoyer.xyz

./: .dockerignore  Cargo.toml  Dockerfile  fly.toml
assets/: index.html  script.js  style.css  upload_success.html
src/: crypto.rs  main.rs  objects.rs
