[package]
name = "meme-host"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
axum-extra = "0.9.3"
copy_to_output = "2.2.0"
dotenvy = "0.15.7"
md-5 = "0.10.6"
mime_guess = "2.0.5"
minijinja = "2.1.1"
object_store = { version = "0.10.2", features = ["aws", "tls-webpki-roots"] }
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.8"

tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
copy_to_output = "2.1.0"
glob = "0.3"
